# file_watch

./: .clang-tidy  .gitignore  CMakeLists.txt
keyd/src/: main.cpp
